LEReportsAndDashboards/src/objects/SolarBot__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>SolarBots</relationshipLabel>
        <relationshipName>SolarBots</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>All_Time_Obscured_Percent_Average__c</fullName>
        <formula>Obscured_Roll_Up__c /  Number_of_Status_Records__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>All Time Percent Obscured Average</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>All_Time_Temperature_Average__c</fullName>
        <formula>Temp_Rollup__c /  Number_of_Status_Records__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>All Time Temperature Average</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>All_Time_kWh_Average__c</fullName>
        <formula>kWh_Roll_Up__c /  Number_of_Status_Records__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>All Time kWh Average</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Status_Records__c</fullName>
        <label>Number of Status Records</label>
        <summaryForeignKey>SolarBot_Status__c.SolarBot__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Obscured_Roll_Up__c</fullName>
        <label>Obscured Roll-Up</label>
        <summarizedField>SolarBot_Status__c.Percent_Obscured__c</summarizedField>
        <summaryForeignKey>SolarBot_Status__c.SolarBot__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SolarBot_Model__c</fullName>
        <label>SolarBot Model</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Solarbot_Models</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Temp_Rollup__c</fullName>
        <label>Temp Roll-Up</label>
        <summarizedField>SolarBot_Status__c.Panel_Temperature__c</summarizedField>
        <summaryForeignKey>SolarBot_Status__c.SolarBot__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Under_Warranty__c</fullName>
        <formula>TODAY()&lt;  Warranty_Expiration__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Under Warranty?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Warranty_Expiration__c</fullName>
        <label>Warranty Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>kWh_Roll_Up__c</fullName>
        <label>kWh Roll-Up</label>
        <summarizedField>SolarBot_Status__c.Kilowatt_Hours__c</summarizedField>
        <summaryForeignKey>SolarBot_Status__c.SolarBot__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>SolarBot</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Solarbot-{0000}</displayFormat>
        <label>SolarBot Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SolarBots</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>